--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
           <li><a class="nav-link scrollto" href="#about">Company Overview</a></li>
           <li><a class="nav-link scrollto" href="#team">Our Executive Team</a></li>
           <li><a class="nav-link scrollto " href="#services">Products & Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Client Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -84,13 +83,10 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Introduction.</h3>
-            <p class="fst-italic">
-             
-            </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> GASOLINA is a service provider that offers
               logistics, transport and fuel services.</li>
@@ -109,7 +105,6 @@
             </p>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -222,8 +217,6 @@
               </div>
             </div>
           </div>
-
-
 
         </div>
 
