--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:austen@gasolina.co.za">austen@gasolina.co.za</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +27 (11) 675-1602
+        <i class="bi bi-phone-fill phone-icon"></i> +27826721087
       </div>
       <div class="social-links d-none d-md-block">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
