--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <h4>Austen Museka</h4>
               <span>Director</span>
               <p>
-                Austen Museka has been a director of Gaslina since it's inception in 2020.
+                Austen Museka has been a director of Gasolina since it's inception in 2020.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -205,7 +205,7 @@
               <h4>Happie Mangowi</h4>
               <span>Director</span>
               <p>
-                Happie Mangowi has been a director of Gaslina since it's inception in 2020.
+                Happie Mangowi has been a director of Gasolina since it's inception in 2020.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
